# cc-history-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test_list.rs  test_parse.rs  test_release.txt
.github/: release.yml
.github/workflows/: ci.yml
exports/: conversation-1bc22c90-34eb-4b2a-9344-bd063490112c.html
src/: chat_reader.rs  main.rs
