[package]
name = "cc-history-rs"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "cc-history"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
open = "5.3"
once_cell = "1.19"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
pulldown-cmark = "0.10"
notify = "6"
similar = "2.4"
